--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fc"
+name = "fontconfig"
 version = "2.13.1"
 description = "fontconfig capi simple binding for rust"
 authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
